# ndc-bigquery

./: .gitignore  Cargo.toml  ConfigServer.Dockerfile  Makefile  architecture.md  changelog.md  debugging.md  docker-compose.yaml  flake.nix  justfile  readme.md  rust-toolchain.toml  todo.org
crates/connectors/ndc-bigquery/: Cargo.toml
crates/connectors/ndc-bigquery/src/: capabilities.rs  config2.sql  configuration.rs  configuration.sql  connector.rs  health.rs  lib.rs  query.rs  schema.rs  state.rs
crates/connectors/ndc-bigquery/tests/: configuration_tests.rs  explain_tests.rs  ndc_tests.rs  query_tests.rs
crates/connectors/ndc-cockroach/: Cargo.toml
crates/connectors/ndc-cockroach/src/: configuration.sql  connector.rs
crates/connectors/ndc-cockroach/tests/: ndc_tests.rs  query_tests.rs
crates/connectors/ndc-postgres/: Cargo.toml
crates/connectors/ndc-postgres/src/: capabilities.rs  configuration.rs  configuration.sql  connector.rs  explain.rs  health.rs  lib.rs  query.rs  schema.rs
crates/connectors/ndc-postgres/tests/: configuration_tests.rs  explain_tests.rs  query_tests.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/tests/: main.rs
crates/e2e-tests/tests/common/: mod.rs
crates/e2e-tests/tests/goldenfiles/: smoke.graphql
crates/e2e-tests/tests/snapshots/: main__smoke.snap
crates/ndc-postgres/: Cargo.toml
crates/ndc-postgres-multitenant/: Cargo.toml
crates/ndc-postgres/src/: capabilities.rs  configuration.rs  configuration.sql  connector.rs  explain.rs  lib.rs  metrics.rs  query.rs  schema.rs
crates/ndc-postgres/tests/: common.rs  configuration_tests.rs  explain_tests.rs  ndc_tests.rs  query_tests.rs  schema_tests.rs  tests.rs
crates/ndc-postgres/tests/common/: assertions.rs  deployment.rs  mod.rs  requests.rs
crates/ndc-postgres/tests/goldenfiles/: aggregate_count_albums.json  dup_array_relationship.json  nested_array_relationships.json  nested_object_relationships.json  select_5.json  select_album_object_relationship_to_artist.json  select_artist_array_relationship_to_album.json  select_int_and_string.json  select_order_by_album_artist_name.json  select_order_by_artist_name.json  select_where_album_id_equals_self_nested_object_relationship.json  select_where_album_id_greater_than.json  select_where_album_id_greater_than_or_equal_to.json  select_where_album_id_less_than_or_equal_to.json  select_where_name_like.json  select_where_name_not_in.json  select_where_name_not_like.json  select_where_name_nregex.json  select_where_name_nsimilar.json  select_where_related_exists.json  select_where_unrelated_exists.json  select_where_variable.json  select_where_variable_int.json
crates/ndc-postgres/tests/snapshots/: configuration_tests__get_configuration_schema.snap  configuration_tests__get_rawconfiguration_schema.snap  explain_tests__select_by_pk.snap  explain_tests__select_where_name_nilike.snap  explain_tests__select_where_variable.snap  query_tests__aggregation__aggregate_count_albums.snap  query_tests__basic__select_5.snap  query_tests__basic__select_by_pk.snap  query_tests__basic__select_int_and_string.snap  query_tests__predicates__select_where_album_id_greater_than.snap  query_tests__predicates__select_where_album_id_greater_than_or_equal_to.snap  query_tests__predicates__select_where_album_id_less_than_or_equal_to.snap  query_tests__predicates__select_where_name_in.snap  query_tests__predicates__select_where_name_iregex.snap  query_tests__predicates__select_where_name_like.snap  query_tests__predicates__select_where_name_nilike.snap  query_tests__predicates__select_where_name_niregex.snap  query_tests__predicates__select_where_name_not_like.snap  query_tests__predicates__select_where_name_nregex.snap  query_tests__predicates__select_where_name_nsimilar.snap  query_tests__predicates__select_where_name_similar.snap  query_tests__predicates__select_where_variable.snap  query_tests__predicates__select_where_variable_int.snap  query_tests__relationships__dup_array_relationship.snap  query_tests__relationships__nested_array_relationships.snap  query_tests__relationships__nested_object_relationships.snap  query_tests__relationships__select_album_object_relationship_to_artist.snap  query_tests__relationships__select_artist_array_relationship_to_album.snap  query_tests__sorting__select_order_by_album_artist_name.snap  query_tests__sorting__select_order_by_artist_album_count.snap  query_tests__sorting__select_order_by_artist_name.snap  query_tests__sorting__select_order_by_name.snap  query_tests__types__select_value_types.snap  schema_tests__get_schema.snap  tests__aggregate_count_albums.snap  tests__explain__select_by_pk.snap  (+27 more)
crates/other-db-tests/: Cargo.toml
crates/other-db-tests/src/: main.rs
crates/postgres-multitenant-ndc/: Cargo.toml
crates/postgres-multitenant-ndc/src/: error.rs  lib.rs  main.rs  routes.rs
crates/postgres-multitenant-ndc/tests/: common.rs  tests.rs
crates/postgres-ndc/: Cargo.toml
crates/postgres-ndc/src/: lib.rs  main.rs
crates/postgres-ndc/tests/: tests.rs
crates/query-engine/: Cargo.toml
crates/query-engine/execution/: Cargo.toml
crates/query-engine/metadata/: Cargo.toml
crates/query-engine/sql/: Cargo.toml
crates/query-engine/src/: lib.rs  metadata.rs  metrics.rs
crates/query-engine/tests/: common.rs  tests.rs
crates/query-engine/translation/: Cargo.toml
crates/tests-common/: Cargo.toml
crates/tests-common/goldenfiles/: select_where_album_id_greater_than.json  select_where_album_id_greater_than_or_equal_to.json  select_where_album_id_less_than.json  select_where_album_id_less_than_or_equal_to.json  select_where_name_eq.json  select_where_name_ilike.json  select_where_name_iregex.json  select_where_name_like.json  select_where_name_neq.json  select_where_name_nilike.json  select_where_name_niregex.json  select_where_name_nsimilar.json  select_where_name_regex.json  select_where_name_similar.json  value_types.json
crates/tests-common/src/: deployment.rs  lib.rs  request.rs
crates/tests/other-db-tests/: Cargo.toml
crates/tests/tests-common/: Cargo.toml
(+464 files in other folders)
