[workspace.package]
version = "0.1.0"

[workspace]
members = [
  "crates/connectors/ndc-citus",
  "crates/connectors/ndc-cockroach",
  "crates/connectors/ndc-postgres",
  "crates/query-engine/sql",
  "crates/query-engine/translation",
  "crates/query-engine/metadata",
  "crates/query-engine/execution",
  "crates/tests/other-db-tests",
  "crates/tests/tests-common"
]
