[workspace]
resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

members = [
  "crates/connectors/ndc-postgres",
  "crates/query-engine/sql",
  "crates/query-engine/translation",
  "crates/query-engine/metadata",
  "crates/query-engine/execution",
  "crates/tests/other-db-tests",
  "crates/tests/tests-common"
]
