[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
reqwest = { version = "0.11.19", features = ["json"] }
serde_json = { version = "1.0.104", features = ["raw_value"] }
tokio = { version = "1.31.0", features = ["full"] }
