[package]
name = "ndc-postgres"
version = "0.1.0"
edition = "2021"

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", rev = "04346c9" }
ndc-hub = { git = "ssh://git@github.com/hasura/ndc-hub.git", rev = "b6f1ce57" }
query-engine = { path = "../query-engine" }

async-trait = "0.1.68"
log = "0.4.19"
serde = "1.0.171"
serde_json = { version = "1.0.103", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
axum = "0.6.19"
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
