[package]
name = "ndc-postgres"
version = "0.1.0"
edition = "2021"

default-run = "ndc-postgres"

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", rev = "f3a6759" }
ndc-hub = { git = "https://github.com/hasura/ndc-hub.git", rev = "f2909c2" }
query-engine = { path = "../query-engine" }

async-trait = "0.1.68"
clap = { version = "4.3.21", features = ["derive"] }
indexmap = "1"
log = "0.4.19"
schemars = { version = "0.8.12", features = ["smol_str"] }
serde = "1.0.179"
serde_derive = "^1.0"
serde_json = { version = "1.0.103", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
axum = "0.6.19"
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
similar-asserts = "1.4.2"
