[package]
name = "ndc-postgres"
version = "0.1.0"
edition = "2021"

default-run = "ndc-postgres"

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "dc82a99", package = "ndc-sdk" }
query-engine = { path = "../query-engine" }

async-trait = "0.1.73"
enum-iterator = "1.4.1"
schemars = { version = "0.8.12", features = ["smol_str", "preserve_order"] }
serde = "1.0.188"
serde_derive = "^1.0"
serde_json = { version = "1.0.105", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.3" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.3" }
tests-common = { path = "../tests-common" }

axum = "0.6.19"
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["tcp"] }
reqwest = "0.11.20"
similar-asserts = "1.5.0"
