[package]
name = "other-db-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "dc82a99", package = "ndc-sdk" }
query-engine = { path = "../query-engine" }
ndc-postgres = { path = "../ndc-postgres" }

async-trait = "0.1.73"
schemars = { version = "0.8.12", features = ["smol_str"] }
serde = "1.0.188"
serde_derive = "^1.0"
serde_json = { version = "1.0.105", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"
tests-common = { path = "../tests-common" }
axum = "0.6.19"
env_logger = "0.10.0"
