[package]
name = "postgres-multitenant-ndc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdc-client = { path = "../gdc-client" }
query-engine = { path = "../query-engine" }

axum = "0.6.19"
axum-macros = "0.3.8"
axum-tracing-opentelemetry = { version = "0.11.0", features = [
    "otlp",
    "tracing_subscriber_ext",
    "zipkin",                 # provides b3 and b3multi propagators
] }
clap = { version = "4.3.16", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
opentelemetry = "0.19.0" # must be same version axum-tracing-opentelemetry uses
opentelemetry-otlp = { version = "0.12.0", features = [ "reqwest-client" ] } # must be same version axum-tracing-opentelemetry uses
serde = "1.0.171"
serde_json = { version = "1.0.103", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
uuid = "1.4.1"

[dev-dependencies]
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }