[package]
name = "query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ndc-hub = { git = "https://github.com/hasura/ndc-hub.git", tag = "v0.1.0-rc.1", package = "ndc-sdk" }

indexmap = "1"
schemars = { version = "0.8.12", features = ["smol_str"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
sqlformat = "0.2.1"
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls", "uuid" ] }
tracing = "0.1.37"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
