[package]
name = "query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "ee22391", package = "ndc-sdk" }

enum-iterator = "1.4.1"
indexmap = "1"
prometheus = "0.13.3"
schemars = { version = "0.8.12", features = ["smol_str"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
sqlformat = "0.2.2"
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls", "uuid" ] }
tracing = "0.1.37"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
