[package]
name = "tests-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "tests_common"
path = "src/lib.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "dc82a99", package = "ndc-sdk" }

serde = "1.0.188"
serde_derive = "^1.0"
serde_json = { version = "1.0.105", features = ["raw_value"] }
tracing = "0.1.37"
axum = "0.6.19"
axum-test-helper = "0.3.0"
reqwest = "0.11.20"
