[package]
name = "ndc-cockroach"
version = "0.1.0"
edition = "2021"

default-run = "ndc-cockroach"

[lib]
name = "ndc_cockroach"
path = "src/lib.rs"

[[bin]]
name = "ndc-cockroach"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "abfc255", package = "ndc-sdk" }
ndc-postgres = { path = "../ndc-postgres" }

async-trait = "0.1.73"
serde_json = { version = "1.0.106", features = ["raw_value"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"

[dev-dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.5" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.5" }
tests-common = { path = "../../tests/tests-common" }

axum = "0.6.19"
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["tcp"] }
reqwest = "0.11.20"
similar-asserts = "1.5.0"
