[package]
name = "ndc-postgres"
version.workspace = true
edition.workspace = true

default-run = "ndc-postgres"

[lib]
name = "ndc_postgres"
path = "src/lib.rs"

[[bin]]
name = "ndc-postgres"
path = "bin/main.rs"

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "e16b85a", package = "ndc-sdk" }
query-engine-sql = { path = "../../query-engine/sql" }
query-engine-translation = { path = "../../query-engine/translation" }
query-engine-execution = { path = "../../query-engine/execution" }
query-engine-metadata = { path = "../../query-engine/metadata" }

async-trait = "0.1.73"
enum-iterator = "1.4.1"
gcp-bigquery-client = "0.17.0"
prometheus = "0.13.3"
schemars = { version = "0.8.15", features = ["smol_str", "preserve_order"] }
serde = "1.0.188"
serde_derive = "^1.0"
serde_json = { version = "1.0.107", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
thiserror = "1.0"
yup-oauth2 = "8.3.0"

[dev-dependencies]
ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.5" }
ndc-test = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.5" }
tests-common = { path = "../../tests/tests-common" }

axum = "0.7.3"
axum-test-helper = "0.3.0"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["tcp"] }
reqwest = "0.11.20"
similar-asserts = "1.5.0"
