[package]
name = "query-engine-translation"
version.workspace = true
edition.workspace = true

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs.git", rev = "a273a01efccfc71ef3341cf5f357b2c9ae2d109f",  default-features = false, features = ["rustls"]}

query-engine-metadata = { path = "../metadata" }
query-engine-sql = { path = "../sql" }

enum-iterator = "1.4.1"
indexmap = "1"
serde_json = "1.0.107"
tracing = "0.1.37"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
sqlformat = "0.2.2"
