[package]
name = "other-db-tests"
version = "0.1.0"
edition = "2021"

[features]
# We only run the AWS Aurora tests if this feature is enabled.
# This is handled by the `just test` command, which enables the feature if the
# `AURORA_CONNECTION_STRING` environment variable is set.
aurora = []

[dependencies]
ndc-sdk = { git = "https://github.com/hasura/ndc-hub.git", rev = "e16b85a", package = "ndc-sdk" }
ndc-postgres = { path = "../../connectors/ndc-postgres" }

async-trait = "0.1.73"
schemars = { version = "0.8.15", features = ["smol_str"] }
serde = "1.0.188"
serde_derive = "^1.0"
serde_json = { version = "1.0.107", features = ["raw_value"] }
sqlx = { version = "0.7.1", features = [ "json", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
prometheus = "0.13.3"
thiserror = "1.0"
tests-common = { path = "../tests-common" }
axum = "0.6.19"
insta = { version = "1.31.0", features = ["json"] }
env_logger = "0.10.0"
